--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not ie < 11"
   ],
   "jest": {
     "moduleFileExtensions": [
